Made some tiny fixes on mobile including alignment of all episodes albums, CTA on homepage, and overall navigation.

--- a/architecture/css/custom.css
+++ b/architecture/css/custom.css
@@ -457,7 +457,8 @@
 		}
 
 		.bw-type .home-extra-note {
-			top: 70%;
+			top: calc(100%-125px);
+			/*top: 70%;*/
 		}
 
 		#apple-badge {
@@ -485,6 +486,7 @@
 		.feature-boxes {
 			padding: 0px;
 			width: 50%;
+			float: left;
 		}
 
 		h4 {
